-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u162, 10
-
Component/s: javafx
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8191226 | 8u172 | Alexander Matveev | P3 | Resolved | Fixed | b01 |
| JDK-8191574 | 8u162 | Alexander Matveev | P3 | Closed | Fixed | b08 |
Media crashes with libavcodec 57 on Ubuntu 17.04 32-bit. To reproduce this issue load any MP4 files in MediaPlayer.
After investigation it looks like issue with libavcodec on Ubuntu and nothing can be done on our side. It crashes when loading libavplugin-ffmpeg-57.so using dlopen.
No issues with pre-build libav or ffmpeg. Does not reproduces on Ubuntu 17.04 64-bit.
After investigation it looks like issue with libavcodec on Ubuntu and nothing can be done on our side. It crashes when loading libavplugin-ffmpeg-57.so using dlopen.
No issues with pre-build libav or ffmpeg. Does not reproduces on Ubuntu 17.04 64-bit.
- backported by
-
JDK-8191226 Media crashes with libavcodec 57 on Ubuntu 17.04 32-bit
-
- Resolved
-
-
JDK-8191574 Media crashes with libavcodec 57 on Ubuntu 17.04 32-bit
-
- Closed
-
- relates to
-
JDK-8191335 Linux 32-bit build fails after fix for JDK-8187594
-
- Closed
-
-
JDK-8181922 Provide media support for libav version 57
-
- Resolved
-