8187594: Media crashes with libavcodec 57 on Ubuntu 17.04 32-bit

Reviewed-by: kcr, ddehaven